Company mode para elisp

--- a/vanila-emacs/Emacs.org
+++ b/vanila-emacs/Emacs.org
@@ -480,6 +480,7 @@
       (use-package doom-modeline
 	:ensure t
 	:config
+	(setq doom-modeline-minor-modes t)
 	(setq doom-modeline-modal t)
 	(setq doom-modeline-modal-modern-icon nil)
 	(setq doom-modeline-icon t)
@@ -488,7 +489,9 @@
 	(setq doom-modeline-buffer-modification-icon t)
 	(setq doom-modeline-height 30)
 	(setq nerd-icons-scale-factor 0.8)
-	:init (doom-modeline-mode 1))
+	:init 
+	(doom-modeline-mode 1)
+	(minions-mode 1))
 
 
 	;; (use-package mood-line
@@ -877,20 +880,24 @@
 
 ** Company Mode
     #+begin_src emacs-lisp
-    (use-package company
-	:after lsp-mode
-	:hook
-            (lsp-mode . company-mode)
-	:bind (:map company-active-map
-	    ("<tab>" . company-complete-selection))
-	    (:map lsp-mode-map
-	    ("<tab>" . company-indent-or-complete-common))
-	:custom
-	(company-minimum-prefix-length 1)
-	(company-idle-delay 0.0))
+      (use-package company
+	  :after lsp-mode
+	  :hook
+	      (lsp-mode . company-mode)
+	      (emacs-lisp-mode . (lambda () (setq-local company-backends '(company-elisp))))
+	  :bind (:map company-active-map
+	      ("<tab>" . company-complete-selection))
+	      (:map lsp-mode-map
+	      ("<tab>" . company-indent-or-complete-common))
+	  :custom
+	  (company-minimum-prefix-length 1)
+	  (company-idle-delay 0.0))
 
-    (use-package company-box
-	:hook (company-mode . company-box-mode))
+      (add-hook 'after-init-hook 'global-company-mode)
+
+      (use-package company-box
+	  :hook (company-mode . company-box-mode))
+
     #+end_src
 
 ** Projectile
